--- a/gtk/theme/Adwaita/gtk-contained.css
+++ b/gtk/theme/Adwaita/gtk-contained.css
@@ -1936,6 +1936,8 @@ stackswitcher button.circular, stackswitcher button.text-button.circular { min-w
 /********* Emoji * */
 popover.emoji-picker { padding-left: 0; padding-right: 0; }
 
+popover.emoji-picker .view, popover.emoji-picker iconview { border-top: 1px solid #c0c0bd; border-bottom: 1px solid #c0c0bd; }
+
 button.emoji-section { border-color: transparent; border-width: 3px; border-style: none none solid; border-radius: 0; margin: 2px 4px 2px 4px; padding: 3px 0 0; min-width: 32px; min-height: 28px; /* reset props inherited from the button style */ background: none; box-shadow: none; text-shadow: none; outline-offset: -5px; }
 
 button.emoji-section:backdrop:not(:checked) { border-color: transparent; }
@@ -1950,9 +1952,9 @@ button.emoji-section:hover label { opacity: 0.775; }
 
 button.emoji-section:checked label { opacity: 1; }
 
-.emoji { font-size: x-large; padding: 6px; border-radius: 6px; }
+.emoji label { font-size: x-large; padding: 6px; }
 
-.emoji :hover { background: #4a90d9; }
+.emoji :hover { border-radius: 6px; background: #4a90d9; }
 
 /* GTK NAMED COLORS ---------------- use responsibly! */
 /*
